# turbo-memory-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.en.md  DEVLOG.md  GEMINI.md  Makefile  README.ko.md  README.md  bench_test.db-shm  bench_test.db-wal  benchmark.py  debug_fts.py  ingest.py  mcp_config.json  memory_store.py  pyproject.toml  server.py  test_hybrid.db-shm  test_hybrid.db-wal  test_memory.db-shm  test_memory.db-wal  turbo_quant.py  validate_hybrid.py
.gemini/settings/: models.json
.kiro/skills/psdd/: SKILL.md
.kiro/steering/: memory.md  psdd.md
.omg/state/: learn-watch.json  quota-watch.json
docs/: PSDD.md  biz-process.md  design.md  requirements.md  tasks.md  uis.md
