[project]
name = "turbo-memory-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "numpy",
]

[project.scripts]
turbo-memory-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
